--- a/src/pages/Public/Styles/home.css
+++ b/src/pages/Public/Styles/home.css
@@ -56,6 +56,10 @@
   display: none;
 }
 
+.terms-agrement {
+  text-align: justify;
+}
+
 @media (max-width: 768px) {
   .video-container {
     position: absolute;
@@ -71,7 +75,7 @@
   .input-container-home {
     display: flex;
     flex-direction: column;
-    margin-top: 55%;
+    margin-top: 45%;
     transform: translateY(-20px);
     transition: opacity 1s, transform 1s;
     opacity: 0;
