--- a/src/components/Styles/GalleryContainer.css
+++ b/src/components/Styles/GalleryContainer.css
@@ -1,3 +1,5 @@
+.container-gallery-all {
+}
 .all-images {
   display: flex;
   flex-direction: column;
@@ -11,6 +13,17 @@
   align-items: center;
   justify-content: center;
   display: flex;
+}
+.divider-container .private {
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  margin-top: 5%;
+}
+.upload-button {
+  position: absolute;
+  top: 10%;
+  z-index: 2;
 }
 .divider {
   width: 500px;
@@ -36,6 +49,10 @@
   margin-top: 170px;
 }
 
+.main-image .private {
+  margin-top: 15%;
+}
+
 @media (max-width: 768px) {
   .divider-container {
     align-items: center;
@@ -43,14 +60,29 @@
     display: flex;
     margin-top: -60%;
   }
+
+  .main-image .private {
+    margin-top: 115%;
+  }
+
   .divider {
     width: 300px;
     height: 50px;
   }
+  .divider-container .private {
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    margin-top: 70%;
+  }
   .image-gallery-container {
     display: flex;
     flex-direction: column;
-    margin-bottom: 20px;
+    margin-top: 30px;
+  }
+  .image-gallery-container .private {
+    display: flex;
+    flex-direction: column;
   }
   .images-individual {
     height: 220px;
@@ -58,7 +90,6 @@
   }
   .image-img {
     width: 90%;
-    margin-top: 200px;
   }
   .image-main-container {
     margin-top: 0%;
