--- a/src/components/Styles/GalleryContainer.css
+++ b/src/components/Styles/GalleryContainer.css
@@ -1,5 +1,3 @@
-.container-gallery-all {
-}
 .all-images {
   display: flex;
   flex-direction: column;
@@ -58,7 +56,7 @@
     align-items: center;
     justify-content: center;
     display: flex;
-    margin-top: -60%;
+    margin-top: 10%;
   }
 
   .main-image .private {
@@ -88,13 +86,17 @@
     height: 220px;
     width: 220px;
   }
-  .image-img {
-    width: 90%;
-  }
   .image-main-container {
     margin-top: 0%;
   }
   .individualContainer {
     margin-top: 100px;
+  }
+  .individual-art-private {
+    width: 100%;
+  }
+  .individual-container-private {
+    width: 100%;
+    margin-top: -20%;
   }
 }
