--- a/src/components/Styles/TermsConditions.css
+++ b/src/components/Styles/TermsConditions.css
@@ -45,12 +45,14 @@
   height: 100%;
   width: 100%;
 }
-
-.para {
-  text-align: justify;
-  width: 80%;
-  margin-top: 0;
-  display: flex;
-  justify-content: left;
-  align-items: flex-start;
+@media (max-width: 768px) {
+  .terms-agrement {
+    text-align: justify;
+    width: 100%;
+    margin-top: 0;
+    display: flex;
+    justify-content: left;
+    align-items: flex-start;
+    color: black;
+  }
 }
